--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.65MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇬🇧 英国-345.7KB/s(Youtube:不良林), server: 78.129.253.9, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-2.66MB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇩🇪 德国-2.87MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-829.3KB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-4.26MB/s(Youtube:不良林), server: tw-tpe-h-tr.cdn.savoy.click, port: 10089, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: tw-tpe-h-tr.cdn.savoy.click, skip-cert-verify: true}
   - {name: 🇨🇳 中国-615.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-1.21MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇯🇵 日本-3.60MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-3.68MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
       - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.66MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.87MB/s(Youtube:不良林)
+      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
       - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.60MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
 rules:
