--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-2.65MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇬🇧 英国-345.7KB/s(Youtube:不良林), server: 78.129.253.9, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-829.3KB/s(Youtube:不良林), server: 167.88.61.175, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-4.26MB/s(Youtube:不良林), server: tw-tpe-h-tr.cdn.savoy.click, port: 10089, type: trojan, password: uDTmEAGwuCUZXZvwhWJk, sni: tw-tpe-h-tr.cdn.savoy.click, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-615.9KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.68MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.54MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 卢森堡-8.52MB/s(Youtube:不良林), server: 91.243.81.248, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-308.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
+  - {name: 🇨🇳 中国-266.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-910.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-1.21MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇯🇵 日本-3.68MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-3.61MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-3.63MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 卢森堡-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 卢森堡-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 卢森堡-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 卢森堡-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 卢森堡-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 卢森堡-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇬🇧 英国-345.7KB/s(Youtube:不良林)
-      - 🇺🇸 美国-829.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-615.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.68MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
+      - 卢森堡-8.52MB/s(Youtube:不良林)
+      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.61MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
