--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-1.54MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 卢森堡-8.52MB/s(Youtube:不良林), server: 91.243.81.248, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-308.4KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38106, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇨🇳 中国-266.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-910.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-624.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.27MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇫🇷 法国-2.02MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇨🇳 中国-545.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.65MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-4.67MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-1.21MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇯🇵 日本-3.68MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-3.63MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林), server: 45.144.176.135, port: 3004, type: ss, cipher: aes-256-cfb, password: 3682oiuvefwwmbc1475}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
-      - 卢森堡-8.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
-      - 卢森堡-8.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
-      - 卢森堡-8.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
-      - 卢森堡-8.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
-      - 卢森堡-8.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
-      - 卢森堡-8.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-1.54MB/s(Youtube:不良林)
-      - 卢森堡-8.52MB/s(Youtube:不良林)
-      - 🇨🇳 中国-308.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-266.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-910.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
+      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-662.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
