--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-624.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1.27MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇫🇷 法国-2.02MB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇨🇳 中国-545.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.65MB/s(Youtube:不良林), server: 193.108.117.75, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-4.67MB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-746.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-2.14MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-2.73MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
+  - {name: 🇨🇳 中国-3.36MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇨🇳 中国-437.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.55MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-1.21MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
-  - {name: 🇯🇵 日本-3.68MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-3.63MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇯🇵 日本-3.67MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-624.7KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.27MB/s(Youtube:不良林)
-      - 🇫🇷 法国-2.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-545.0KB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.65MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.67MB/s(Youtube:不良林)
+      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
+      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
       - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.68MB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.63MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
