--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-746.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-2.14MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇩🇪 德国-2.73MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇨🇳 中国-3.36MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-437.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 台湾-13.94MB/s(Youtube:不良林), server: hinet.52147.top, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-513.7KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.23MB/s(Youtube:不良林), server: best02.downloadmovie.cn, port: 65043, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best02.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-468.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32003, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.50MB/s(Youtube:不良林), server: 193.108.117.75, port: 8881, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇩🇪 德国-2.31MB/s(Youtube:不良林), server: 193.108.117.75, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
   - {name: 🇩🇪 德国-2.55MB/s(Youtube:不良林), server: 193.108.117.75, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-3.77MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20710, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-1.21MB/s(Youtube:不良林), server: 13.124.29.75, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇯🇵 日本-3.67MB/s(Youtube:不良林), server: 85.208.108.20, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇯🇵 日本-3.56MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,34 +52,35 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +88,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +104,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +129,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-746.8KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.14MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.73MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.36MB/s(Youtube:不良林)
-      - 🇨🇳 中国-437.5KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-13.94MB/s(Youtube:不良林)
+      - 🇨🇳 中国-513.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.23MB/s(Youtube:不良林)
+      - 🇨🇳 中国-468.4KB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.50MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.31MB/s(Youtube:不良林)
       - 🇩🇪 德国-2.55MB/s(Youtube:不良林)
       - 🇺🇸 美国-3.77MB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.21MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.67MB/s(Youtube:不良林)
       - 🇯🇵 日本-3.56MB/s(Youtube:不良林)
 rules:
